--- a/application/views/templates/frontend/bio.html
+++ b/application/views/templates/frontend/bio.html
@@ -1,17 +1,22 @@
-<section id="section4" class="bg-light-gray " data-center=""
-data-top-bottom="">
+<section id="section2" class="bio bg-light-gray " data-center="" data-top-bottom="">
 <div class="container">
-
+<div class="row">
+    <div class="col-lg-12 text-center">
+            <h2 class="section-heading">About me</h2>
+    </div>
+</div> 
 <div class="row wow fadeInRight" data-wow-duration="2s">
     <div class="col-sm-9 th-1">
     <div class="bio-member">
     <a href="#"><h4>Chirag Kamat</h4></a>
-    <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        <p class="text-muted">
+            {{$bio['story']}}
+        </p>
     </div>
     </div>
     <div class="col-sm-3 th-1">
         <div class="bio-member">
-        <a href="#"><img src="{{$base_url}}/assets/images/Team-Placeholder.jpg" class="img-responsive img-circle" alt=""></a>
+        <a href="#"><img src="{{$bio['url']}}" class="img-responsive img-circle" alt=""></a>
         </div>
     </div>
 </div>
