--- a/application/views/templates/admin/bio.html
+++ b/application/views/templates/admin/bio.html
@@ -9,24 +9,58 @@
                    
                   </div>
                 </div>
-                <div class="my-4">
-                    <h6 class="h6">Current image</h6> <br>
-                    <img src="{{$bio['url']}}" width="100" height="100">
+                  <h6 class="h6">Current image</h6> <br>
+                  <img id="preview" src="/uploads/{{$bio['url']}}" width="100" height="100"> 
+                    <div style="clear: both;"></div>
+                <div class="my-4"  width="900" height="380">
                   
+
+                    <form id="upload_form" enctype="multipart/form-data" method="post" action="/admin/biography/upload/">
+                      <div>
+                        
+                          <div><input type="file" name="image_file" id="image_file" onchange="fileSelected();" />  <input type="button" value="Upload" onclick="startUploading()" /></div>
+                      
+                        </div>
+                      <div>
+                        
+                      </div>
+                      <div id="fileinfo">
+                          <div id="filename"></div>
+                          <div id="filesize"></div>
+                          <div id="filetype"></div>
+                          <div id="filedim"></div>
+                      </div>
+                      <div id="error">You should select valid image files only!</div>
+                      <div id="error2">An error occurred while uploading the file</div>
+                      <div id="abort">The upload has been canceled by the user or the browser dropped the connection</div>
+                      <div id="warnsize">Your file is very big. We can't accept it. Please select more small file</div>
+  
+                      <div id="progress_info">
+                          <div id="progress"></div>
+                          <div id="progress_percent">&nbsp;</div>
+                          <div class="clear_both"></div>
+                          <div id="upload_response"></div>
+                      </div>
+                  </form> 
+
                 </div>
+                <div style="clear: both;"></div>
                 <div class="my-4"  width="900" height="380">
                     <form method="post" action="/admin/biography/save/">
                         <div class="form-group">
-                          <label for="text">Image URL:</label>
-                          <input type="text" class="form-control" name="urlImg" value="{{$bio['url']}}">
+                          <label for="text">Name:</label>
+                          <input type="text" class="form-control" name="name" value="{{$bio['name']}}">
                         </div>
                         <div class="form-group">
                           <label for="pwd">Content:</label>
-                          <textarea class="form-control" name="biograpyContent">{{$bio['story']}}</textarea>
+                          <textarea class="form-control editor" name="biograpyContent">{{$bio['story']}}</textarea>
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
+
+                  
                     <span>{{$ERROR}}</span>
+                    
                 </div>
               </main>
     {{include file="footer.html"}}
