--- a/application/views/templates/frontend/bio.html
+++ b/application/views/templates/frontend/bio.html
@@ -10,7 +10,7 @@
   
     <div class="col-sm-3 th-1">
         <div class="bio-member">
-        <a href="#"><img src="/uploads/{{$bio['url']}}" class="img-responsive img-circle" alt=""></a>
+        <a href="#"><img src="/uploads/{{$bio['url']}}" class="img-responsive" alt=""></a>
         </div>
     </div> 
     <div class="col-sm-9 th-1">
